# nekobus

./: .gitignore  README.md  build-lambda.sh  pyproject.toml
.github/workflows/: build-and-release.yml  osv-scanner-pr.yml  osv-scanner.yml
infrastructure/: lambda.tf  main.tf  outputs.tf  secrets.tf  variables.tf
lambda/: lambda_function.py
nekobus/: jamf.py  migration.py  utils.py  zentral.py
